[package]
name = "transactions"
version = "0.1.0"
authors = ["Matt Woelfel <matt@woelfware.com>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "3.1.8", features = ["derive"], optional = true }
csv = "1.1.6"
env_logger = { version = "0.9.0", optional = true }
eyre = "0.6.8"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }

[features]
default = ["clap"]

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
